{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 57,
  "lineage": "223e5ab8-1ded-bd1c-2c01-c31458102f98",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:326030354547:loadbalancer/app/mlflow-fargate-load-balancer/0f87c7a75d2bba04",
            "arn_suffix": "app/mlflow-fargate-load-balancer/0f87c7a75d2bba04",
            "desync_mitigation_mode": "defensive",
            "dns_name": "mlflow-fargate-load-balancer-140464090.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:326030354547:loadbalancer/app/mlflow-fargate-load-balancer/0f87c7a75d2bba04",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mlflow-fargate-load-balancer",
            "security_groups": [
              "sg-017a38e633022eaa9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0474c3744e88b1051"
              },
              {
                "subnet_id": "subnet-064eee5eb373cf109"
              },
              {
                "subnet_id": "subnet-0d68eb7e1024f104f"
              }
            ],
            "subnets": [
              "subnet-0474c3744e88b1051",
              "subnet-064eee5eb373cf109",
              "subnet-0d68eb7e1024f104f"
            ],
            "vpc_id": "vpc-078060669a9352ae1",
            "zone_id": "ZHURV8PSTC4K8"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:326030354547:listener/app/mlflow-fargate-load-balancer/0f87c7a75d2bba04/56a69ce99f3afd84",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:326030354547:targetgroup/cb-target-group/7169d89b3e1dbbbd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:326030354547:listener/app/mlflow-fargate-load-balancer/0f87c7a75d2bba04/56a69ce99f3afd84",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:326030354547:loadbalancer/app/mlflow-fargate-load-balancer/0f87c7a75d2bba04",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.main",
            "aws_alb_target_group.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:326030354547:targetgroup/cb-target-group/7169d89b3e1dbbbd",
            "arn_suffix": "targetgroup/cb-target-group/7169d89b3e1dbbbd",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:326030354547:targetgroup/cb-target-group/7169d89b3e1dbbbd",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "cb-target-group",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-078060669a9352ae1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:326030354547:security-group/sg-0b44581ae6b95382a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b44581ae6b95382a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-017a38e633022eaa9"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "ai-ml-mlflow-rds2",
            "name_prefix": "",
            "owner_id": "326030354547",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-078060669a9352ae1"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}